@@ -102,7 +102,7 @@ class MediaBlock extends Component {
   }
 
   render() {
-    const { blockProps, src, alt } = this.props;
+    const { blockProps, src, alt, fallbackText } = this.props;
     const { showTooltipAt } = this.state;
     const { entityType } = blockProps;
 
@@ -117,9 +117,11 @@ class MediaBlock extends Component {
         <span className="MediaBlock__icon-wrapper" aria-hidden>
           <Icon icon={entityType.icon} className="MediaBlock__icon" />
         </span>
-
         <img className="MediaBlock__img" src={src} alt={alt} width="256" />
 
+        {src ? null : (
+          <span className="MediaBlock__fallback">{fallbackText}</span>
+        )}
         {showTooltipAt && this.renderTooltip()}
       </button>
     );
@@ -135,12 +137,14 @@ MediaBlock.propTypes = {
   block: PropTypes.object.isRequired,
   src: PropTypes.string,
   alt: PropTypes.string,
+  fallbackText: PropTypes.string,
   children: PropTypes.node.isRequired,
 };
 
 MediaBlock.defaultProps = {
   src: null,
   alt: '',
+  fallbackText: null,
 };
 
 export default MediaBlock;
