@@ -11,6 +11,7 @@ describe('MediaBlock', () => {
         <MediaBlock
           src="example.png"
           alt=""
+          fallbackText="Fallback text"
           block={{}}
           blockProps={{
             editorState: {},
@@ -31,12 +32,38 @@ describe('MediaBlock', () => {
     ).toMatchSnapshot();
   });
 
-  it('no data', () => {
+  it('no data, with fallback', () => {
     expect(
       shallow(
         <MediaBlock
           src=""
           alt=""
+          fallbackText="Fallback text"
+          block={{}}
+          blockProps={{
+            editorState: {},
+            entityType: {
+              icon: '#icon-test',
+            },
+            entity: {
+              getData: () => ({}),
+            },
+            onChange: () => {},
+          }}
+        >
+          Test
+        </MediaBlock>,
+      ),
+    ).toMatchSnapshot();
+  });
+
+  it('no data, no fallback', () => {
+    expect(
+      shallow(
+        <MediaBlock
+          src=""
+          alt=""
+          fallbackText={null}
           block={{}}
           blockProps={{
             editorState: {},
@@ -81,6 +108,7 @@ describe('MediaBlock', () => {
         <MediaBlock
           src="example.png"
           alt=""
+          fallbackText="Fallback text"
           block={{
             getKey: () => 'abcde',
             getLength: () => 1,
