@@ -14,6 +14,7 @@ exports[`EmbedBlock no data 1`] = `
       "onChange": [Function],
     }
   }
+  fallbackText=""
   src={null}
 >
   <button
@@ -44,6 +45,7 @@ exports[`EmbedBlock renders 1`] = `
       "onChange": [Function],
     }
   }
+  fallbackText=""
   src="http://www.example.com/example.png"
 >
   <a
