@@ -14,6 +14,7 @@ exports[`ImageBlock alt 1`] = `
       "onChange": [Function],
     }
   }
+  fallbackText={null}
   src="example.png"
 >
   <p
@@ -49,6 +50,7 @@ exports[`ImageBlock no data 1`] = `
       "onChange": [Function],
     }
   }
+  fallbackText={null}
   src={null}
 >
   <p
@@ -84,6 +86,7 @@ exports[`ImageBlock renders 1`] = `
       "onChange": [Function],
     }
   }
+  fallbackText={null}
   src="example.png"
 >
   <p
