@@ -5,7 +5,10 @@ import { Icon } from 'draftail';
 import Tooltip from '../Tooltip/Tooltip';
 import Portal from '../../Portal/Portal';
 
-const shortenLabel = (label) => {
+/**
+ * Shortens the given label if it goes beyond a predetermined limit.
+ */
+export const shortenLabel = (label) => {
   let shortened = label;
   if (shortened.length > 25) {
     shortened = `${shortened.slice(0, 20)}…`;
