@@ -84,6 +84,7 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Clean up multiple eslint rules usage and configs to align better with the Wagtail coding guidelines (LB (Ben Johnston))
  * Make ModelAdmin InspectView footer actions consistent with other parts of the UI (Thibaud Colas)
  * Switch all report views to use Wagtail’s reusable header component (Paarth Agarwal)
+ * Add support for Twitter and other text-only embeds in Draftail embed previews (Iman Syed, Paarth Agarwal)
 
 ### Bug fixes
 
